[package]
name = "hyper-io-replica"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libublk = { path = "../libublk-rs", version = "0.3" }
clap = { version = "4.3", features = ["derive"] }
clap_derive = "4.3"
libc = "0.2"
anyhow = {version = "1.0.66", features = ["default"]}
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
serde_repr = "0.1"
log = {version = "0.4", features = ["release_max_level_trace"]}
env_logger = "0.9"
backtrace = "0.3"
daemonize = "0.5"
nix = "0.26.2"
io-uring = "0.6.0"
ilog = "1.0.1"
shared_memory = "0.12.4"
rand = "0.8.4"
smol = "2.0.2"
futures = "0.3.29"
async-trait = "0.1"
rustversion = "1.0.14"
bytesize = "1.3.0"
block-utils = "0.11.1"
uuid = { version = "1.13.1", features = ["v4"] }
time = { version = "0.3.37", features = ["formatting", "parsing"] }
ctrlc = "3.4.5"
memx = { version = "0.1.32", optional = true }
aws-config = { version = "1.5.15", features = ["behavior-version-latest"], optional = true  }
aws-sdk-s3 = { version = "1.71.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
hyperfile = { version = "0.1.0", path = "../hyperfile_staging", optional = true }
reactor = { version = "0.1.0", path = "../reactor", optional = true }

[features]
blocking = ["dep:hyperfile", "dep:tokio", "dep:aws-config", "dep:aws-sdk-s3"]
reactor = ["dep:reactor", "dep:hyperfile", "dep:tokio", "dep:aws-config", "dep:aws-sdk-s3"]
piopr = []
fastmemcpy = ["dep:memx"]
pio-write-batch = []
default = ["reactor", "piopr", "pio-write-batch"]

[[bin]]
name = "format"
path = "src/format_main.rs"
